make icons, bug fixes

--- a/index.html
+++ b/index.html
@@ -90,11 +90,10 @@
     <script src="https://code.jquery.com/jquery-2.2.2.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="https://mapzen.com/js/mapzen.min.js"></script>
-
     <script src="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15/cartodb.js"></script>
-
     <script src="js/decode.js"></script>
     <script src="js/leaflet-sidebar.min.js"></script>
+    <script src="js/mapSetup.js"></script>
     <script src="js/setup.js"></script>
     <script src="js/main.js"></script>
 
